--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "node-fetch": "^3.1.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
