--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
       "dom.iterable",
       "esnext"
     ],
+    "typeRoots": [ "./types", "./node_modules/@types"],
+    // "exclude": ["node_modules", "typings"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
