--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,6 +27,7 @@
     },
     "plugins": [
         "react",
+        "react-hooks",
         "@typescript-eslint",
         "prettier"
     ],
@@ -34,5 +35,10 @@
         "require-jsdoc": "off",
         "@typescript-eslint/ban-ts-comment": "off",
         "@typescript-eslint/ban-types": "off"
+    },
+    "settings": {
+        "react": {
+          "version": "detect"
+        }
     }
 }
