--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,20 +4,8 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:@typescript-eslint/eslint-recommended",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:react-hooks/recommended",
-        "plugin:react/recommended",
-        "plugin:import/errors",
-        "plugin:import/warnings",
-        "plugin:import/typescript",
-        "google",
-        "plugin:prettier/recommended",
-        "prettier"
-        //"prettier/react"
+        "plugin:@web-bee-ru/react"
     ],
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
             "jsx": true
@@ -26,19 +14,9 @@
         "sourceType": "module"
     },
     "plugins": [
-        "react",
-        "react-hooks",
-        "@typescript-eslint",
-        "prettier"
+        "react"
     ],
     "rules": {
-        "require-jsdoc": "off",
-        "@typescript-eslint/ban-ts-comment": "off",
-        "@typescript-eslint/ban-types": "off"
-    },
-    "settings": {
-        "react": {
-          "version": "detect"
-        }
     }
 }
+
